Update and rename ToDo.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
   <head>
     <title>A TO-DO Application</title>
-    <link rel="stylesheet" href="td.css">
+    <link rel="stylesheet" href="style.css">
 <script>
 
 document.addEventListener('DOMContentLoaded', ()=> {
